--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/letter-b.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app"
@@ -24,7 +24,6 @@
   </head>
   <body>
     <div id="root"></div>
-    //typrwiter effect
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 
   </body>
